[gd_scene load_steps=14 format=3 uid="uid://8tl5rtaejlwi"]

[ext_resource type="Script" uid="uid://dcpdkwle3qld4" path="res://Scripts/level_menu.gd" id="1_3ie8g"]
[ext_resource type="Texture2D" uid="uid://d3sv3im4vm3d5" path="res://Assets/Deco/water_a_8frames.png" id="1_dsbtr"]
[ext_resource type="Texture2D" uid="uid://cimwrr6cc8vau" path="res://Assets/Backgrounds/mountains_a.png" id="2_3ie8g"]
[ext_resource type="Texture2D" uid="uid://b2ug3ea1oofx2" path="res://Assets/Deco/sun.png" id="3_iwiyi"]
[ext_resource type="Texture2D" uid="uid://cg764uiabvlq" path="res://Assets/Backgrounds/trees.png" id="4_qowhx"]
[ext_resource type="Texture2D" uid="uid://bwcrq8jgpr1ow" path="res://Assets/Deco/rock.png" id="5_m8bk1"]
[ext_resource type="Texture2D" uid="uid://c4n53rjwptjn6" path="res://Assets/Deco/tree_trunk.png" id="6_papg5"]
[ext_resource type="Texture2D" uid="uid://dbbea0b3hjxjs" path="res://Assets/Deco/tree.png" id="7_4cu3e"]
[ext_resource type="Texture2D" uid="uid://btj2vrg0qo5gy" path="res://Assets/Enemies/cactus.png" id="8_afd11"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_onwru"]
bg_color = Color(0.419608, 0.247059, 0.901961, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_0ndaj"]
bg_color = Color(0.419608, 0.247059, 0.901961, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_4c0jg"]
bg_color = Color(0.218609, 0.0877106, 0.517929, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_d5fjm"]
bg_color = Color(0.6, 0.6, 0.8, 1)
border_width_left = 5
border_width_top = 5
border_width_right = 5
border_width_bottom = 5
border_blend = true
corner_radius_top_left = 2
corner_radius_top_right = 2
corner_radius_bottom_right = 2
corner_radius_bottom_left = 2

[node name="level_menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_3ie8g")

[node name="sky" type="Sprite2D" parent="."]
position = Vector2(590, 67)
scale = Vector2(5.64649, 17.7344)
texture = ExtResource("1_dsbtr")
flip_h = true

[node name="mountains" type="Sprite2D" parent="."]
position = Vector2(232, 260)
scale = Vector2(1.85547, 2.21875)
texture = ExtResource("2_3ie8g")

[node name="mountains2" type="Sprite2D" parent="."]
position = Vector2(704, 269)
scale = Vector2(1.85547, 2.21875)
texture = ExtResource("2_3ie8g")

[node name="mountains3" type="Sprite2D" parent="."]
position = Vector2(1176, 269)
scale = Vector2(1.85547, 2.21875)
texture = ExtResource("2_3ie8g")
flip_h = true

[node name="sun" type="Sprite2D" parent="."]
position = Vector2(576, 64)
scale = Vector2(3, 3)
texture = ExtResource("3_iwiyi")
flip_h = true
hframes = 6
frame = 5

[node name="trees" type="Sprite2D" parent="."]
position = Vector2(216, 352)
scale = Vector2(1.85547, 2.21875)
texture = ExtResource("4_qowhx")
flip_h = true

[node name="trees2" type="Sprite2D" parent="."]
position = Vector2(688, 352)
scale = Vector2(1.85547, 2.21875)
texture = ExtResource("4_qowhx")
flip_h = true

[node name="trees3" type="Sprite2D" parent="."]
position = Vector2(1160, 352)
scale = Vector2(1.85547, 2.21875)
texture = ExtResource("4_qowhx")
flip_h = true

[node name="Polygon2D" type="Polygon2D" parent="."]
position = Vector2(-40, -552)
scale = Vector2(1, 1.78049)
color = Color(0.360855, 0.269653, 0.0356174, 1)
polygon = PackedVector2Array(768, 856, -56, 808, -16, 552, 1544, 584, 1048, 880)

[node name="decoration" type="Sprite2D" parent="."]
position = Vector2(976, 488)
scale = Vector2(3, 3.589)
texture = ExtResource("5_m8bk1")
flip_h = true

[node name="decoration2" type="Sprite2D" parent="."]
position = Vector2(808, 584)
scale = Vector2(3, 3.589)
texture = ExtResource("5_m8bk1")
flip_h = true

[node name="decoration3" type="Sprite2D" parent="."]
position = Vector2(72, 488)
scale = Vector2(3, 3.589)
texture = ExtResource("5_m8bk1")
flip_h = true

[node name="decoration4" type="Sprite2D" parent="."]
position = Vector2(448, 560)
scale = Vector2(3, 3.589)
texture = ExtResource("5_m8bk1")
flip_h = true

[node name="decoration5" type="Sprite2D" parent="."]
position = Vector2(160, 568)
scale = Vector2(3, 3.589)
texture = ExtResource("6_papg5")
flip_h = true

[node name="decoration6" type="Sprite2D" parent="."]
position = Vector2(232, 408)
scale = Vector2(3, 3.589)
texture = ExtResource("7_4cu3e")
flip_h = true

[node name="decoration7" type="Sprite2D" parent="."]
position = Vector2(1104, 440)
scale = Vector2(3, 3.589)
texture = ExtResource("8_afd11")
flip_h = true
hframes = 6
frame = 5

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -300.0
offset_right = 400.0
offset_bottom = 300.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 80

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 60

[node name="Option1" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.34902, 0.0980392, 0.894118, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_onwru")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ndaj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4c0jg")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5fjm")
action_mode = 0
text = "Nivel 1"

[node name="Option2" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.34902, 0.0980392, 0.894118, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_onwru")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ndaj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4c0jg")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5fjm")
action_mode = 0
text = "Nivel 2"

[node name="Option3" type="Button" parent="VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.34902, 0.0980392, 0.894118, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_onwru")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ndaj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4c0jg")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5fjm")
action_mode = 0
text = "Nivel 3"

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
theme_override_constants/separation = 60

[node name="Option4" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.34902, 0.0980392, 0.894118, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_onwru")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ndaj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4c0jg")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5fjm")
action_mode = 0
text = "Nivel 4"

[node name="Option5" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.34902, 0.0980392, 0.894118, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_onwru")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ndaj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4c0jg")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5fjm")
action_mode = 0
text = "Nivel 5
"

[node name="Option6" type="Button" parent="VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.34902, 0.0980392, 0.894118, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_onwru")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ndaj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4c0jg")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5fjm")
action_mode = 0
text = "Nivel 6"

[node name="ReturnWorld" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.34902, 0.0980392, 0.894118, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_onwru")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ndaj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4c0jg")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5fjm")
action_mode = 0
text = "Volver a selección de mundo"

[node name="ReturnMain" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_disabled_color = Color(0.34902, 0.0980392, 0.894118, 1)
theme_override_font_sizes/font_size = 50
theme_override_styles/focus = SubResource("StyleBoxFlat_onwru")
theme_override_styles/hover = SubResource("StyleBoxFlat_0ndaj")
theme_override_styles/pressed = SubResource("StyleBoxFlat_4c0jg")
theme_override_styles/normal = SubResource("StyleBoxFlat_d5fjm")
action_mode = 0
text = "Volver a menú principal"

[connection signal="pressed" from="VBoxContainer/HBoxContainer/Option1" to="." method="_on_option_1_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Option2" to="." method="_on_option_2_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer/Option3" to="." method="_on_option_3_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Option4" to="." method="_on_option_4_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Option5" to="." method="_on_option_5_pressed"]
[connection signal="pressed" from="VBoxContainer/HBoxContainer2/Option6" to="." method="_on_option_6_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnWorld" to="." method="_on_return_world_pressed"]
[connection signal="pressed" from="VBoxContainer/ReturnMain" to="." method="_on_return_main_pressed"]
